contacts now load

--- a/TwatsAppClient/TwatsAppClient/TwatsAppClient.csproj
+++ b/TwatsAppClient/TwatsAppClient/TwatsAppClient.csproj
@@ -66,10 +66,6 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="fonts\fonts.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="LoginWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -82,7 +78,10 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="extensions\SpinnerExtensions.cs" />
+    <Compile Include="Helpers\Converters.cs" />
+    <Compile Include="Helpers\Exceptions.cs" />
+    <Compile Include="Helpers\BindingModels.cs" />
+    <Compile Include="Helpers\SpinnerExtensions.cs" />
     <Compile Include="LoginWindow.xaml.cs">
       <DependentUpon>LoginWindow.xaml</DependentUpon>
     </Compile>
@@ -118,7 +117,7 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <Resource Include="fonts\VarelaRound-Regular.ttf" />
-    <Compile Include="API.strings.cs" />
+    <Compile Include="Helpers\API.strings.cs" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -129,7 +128,13 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="img\logo.png" />
+    <Resource Include="img\Spongebob_PNG.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="extensions\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="img\chat_bg.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
