--- a/TwatsAppServer/TwatsAppCore/TwatsAppCore.csproj
+++ b/TwatsAppServer/TwatsAppCore/TwatsAppCore.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Helpers\Utilities.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
     <Compile Include="Models\BindingModels.cs" />
+    <Compile Include="Models\DataTransferObjects.cs" />
     <Compile Include="Models\DomainModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\BaseService.cs" />
