--- a/TwatsAppClient/TwatsAppClient/App.config
+++ b/TwatsAppClient/TwatsAppClient/App.config
@@ -28,6 +28,9 @@
             <setting name="UserId" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="LastRefresh" serializeAs="String">
+                <value />
+            </setting>
         </TwatsAppClient.Properties.Settings>
     </userSettings>
 </configuration>
