--- a/TwatsAppClient/TwatsAppClient/Properties/Settings.settings
+++ b/TwatsAppClient/TwatsAppClient/Properties/Settings.settings
@@ -20,5 +20,8 @@
     <Setting Name="UserId" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="LastRefresh" Type="System.DateTimeOffset" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
