--- a/TwatsAppClient/TwatsAppClient/packages.config
+++ b/TwatsAppClient/TwatsAppClient/packages.config
@@ -3,5 +3,6 @@
   <package id="Flurl" version="2.4.0" targetFramework="net461" />
   <package id="Flurl.Http" version="1.2.0" targetFramework="net461" />
   <package id="FontAwesome.WPF" version="4.7.0.9" targetFramework="net461" />
+  <package id="MyToolkit" version="2.5.16" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
 </packages>
