--- a/TwatsAppServer/TwatsAppServer/TwatsAppServer.csproj
+++ b/TwatsAppServer/TwatsAppServer/TwatsAppServer.csproj
@@ -122,7 +122,7 @@
     <Compile Include="Extensions\OwinContextExtensions.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
-    <Compile Include="Controllers\AuthController.cs" />
+    <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -140,7 +140,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TwatsAppCore\TwatsAppCore.csproj">
